--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost/equip
 spring.datasource.username=postgres
 spring.datasource.password=
 spring.jpa.generate-ddl=true
+
 spring.freemarker.expose-request-attributes=true
+spring.freemarker.suffix= .ftl
