--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- REST API Support =) -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.7</version>
+        </dependency>
+
         <!-- DataBase support -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -58,6 +65,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+               <executions>
+                   <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                   </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
