--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,10 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- REST API Support =) -->
+        <!-- boot mail support -->
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.7</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
         <!-- DataBase support -->
