--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.jpa.generate-ddl=true
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix= .ftl
 upload.path=/C:/Users/ARM/Desktop/prj/plant-Equipment-master/uploads
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=andrey.kalugin.v@yandex.ru
+spring.mail.password=42234223a
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
